@@ -6,6 +6,8 @@ QuickCheck HEAD
 	  'Test.QuickCheck'
 	* 'Test.QuickCheck.Function', 'Test.QuickCheck.Poly', and
 	  'Test.QuickCheck.Monadic' are now Safe modules.
+	* 'Test.QuickCheck.Monadic' functions no longer ignore returned
+	  `a`s, and use `()` instead.
 
 QuickCheck 2.9.2 (released 2016-09-15)
 	* Fix a bug where some properties were only being tested once
